log
Wed, Mar 19, 2025  9:00:47 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:07:44 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|4
total_score: 10/70
35b9569
Wed, Mar 19, 2025  9:16:45 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8bf8dc3
Wed, Mar 19, 2025  9:22:51 AM: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
4f24088
Wed, Mar 19, 2025  9:24:26 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:8: error: unused variable 'contador' [-Werror=unused-variable]
    int contador = get_size(L);
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6243b7f
Wed, Mar 19, 2025  9:25:29 AM: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
2a0ac59
